# fleurdelys

./: .gitignore  CMake.tmLanguage  README.md  pyproject.toml  pyrefly.toml
src/cmake_ls/: __main__.py  linting.py  signatures.py
src/fleurdelys/: constants.py  linting.py  server.py  utils.py
test/: hello.cmake  meta_commands.cmake  reproduce_error.py  run_lint_test.py  test_completions.py  test_implicit_args.py  test_ls_signature_help.py  test_meta_commands.py  test_signatures.py  verification.cmake  verify_scoping.py
